# morn

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DESIGN_AUDIT.md  GAP_ANALYSIS.md  LICENSE  README.md  b1_cost_reliability.md  b1_persona_ports.md  b1a_translate_welcome.md  b1b_translate_studio.md  b1c_translate_canvas.md  b2_local_model.md  b2_memory.md  b3_error_boundary.md  b3_oauth.md  b4_sync.md  b4_voice_input.md  b5_analytics.md  b5_proactive.md  b6_pluginize.md  channel-macro-insert.md  channel-trait-task.md  child-process-task.md  pyproject.toml  tasks-templates.md  tasks.md
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2025-06-07_164500-rollback-delegate-task.md  2026-06-07_gap-audit-execution.md  2026-06-07_phase1-tasks.md  2026-06-07_readme-axum-upgrade.md
docs/: API_REFERENCE.md  Morn_Agent_Runtime_Complete.md  Morn_Agent_Runtime_Whitepaper.md  Morn_Complete_Whitepaper.md  PLUGIN_DEV_GUIDE.md  architecture.md  channels.md  components.md  computer-control.md  console.md  coo.md  development.md  market.md  plugin-development.md  plugin-examples.md  setup.md  studio.md
extensions/chrome/: background.js  config.js  content.js  manifest.json  popup.css  popup.html  popup.js  sidepanel.html  sidepanel.js
extensions/git-plugin/: main.js  manifest.json
morn/: MORN_QUICKSTART.md  PLUGIN_DEV_GUIDE.md  __init__.py  __main__.py
morn/cli/: main.py
morn/core/: __init__.py  bus.py  config_watcher.py  event_log.py  hooks.py  mcp_server.py  plugin.py  plugin_contract.py  plugin_loader.py  resource_quota.py  sandbox.py  security.py  skill_store_interface.py
morn/plugins/: __init__.py  audit.py  bond_tracker.py  dream_engine.py  example_hello.py  health_monitor.py  hindsight.py  identity_affirmer.py  intent_drift.py  milestones.py  self_pruner.py  self_reflection.py  thinking_evolution.py
morn/sdk/: __init__.py  chat.py  chat_engine.py  memory.py  memory_audit.py  memory_retrieval.py  memory_store.py  memory_trash.py  memory_vector.py  presence.py  security.py  security_boundary.py  security_protection.py  security_rules.py  token_tracker.py
mornd/: .gitignore  README.md  _demo_acceptance.py  bond.json  demo_acceptance.py  fix_api_instructions.txt  fix_full_instructions.txt  fix_polling.sh  fix_polling_instructions.txt  fix_sendmsg_instructions.txt  fix_wording2_instructions.txt  fix_wording_instructions.txt  morn_phase5_nlconfig.txt  morn_phase7_riskguard.txt  morn_phase8_consciousness.txt  phase10_task.txt  phase11_task.txt  phase3_instructions.txt  phase4_instructions.txt  phase5_instr.txt  phase6_instr.txt  phase6_task.txt  phase7_instr.txt  phase9_task.txt  phaseB_task.txt  pyproject.toml  requirements.txt  run_phase5.sh  run_phase6.sh  run_phase7.sh  tasks.md  tasks_7_v02.md  tasks_7_v04.md  tasks_7_v10.md  tasks_copy_morn.md  tasks_eventbus.md  tasks_eventbus_plugins.md  tasks_eventbus_round3.md  tasks_eventbus_round4.md  tasks_phase1_round1.md  (+21 more)
mornd/examples/: instance_config.json
mornd/morn/: __init__.py
mornd/morn_core/: __init__.py  heartbeat.py  server.py
mornd/scripts/: run_stress.py
mornd/tests/: __init__.py  bond.json  conftest.py  stress_test.py  test_action_router.py  test_api_caller.py  test_apz_store.py  test_audit_agent.py  test_audit_agent_llm.py  test_bond_tracker.py  test_challenge_mode.py  test_chat_engine.py  test_cli_executor.py  test_crypto.py  test_diminishing_returns_add.py  test_dynamic_permissions.py  test_emotion_delta_parse.py  test_emotion_five_dim.py  test_emotion_replay.py  test_emotion_seven_dim.py  test_emotional_temperature_add.py  test_end_to_end_live.py  test_ethical_judgment.py  test_eventbus.py  test_eventbus_integration.py  test_evolution_audit.py  test_evolution_log.py  test_external_boundary.py  test_external_memory.py  test_graph_store.py  test_graph_store_split.py  test_hallucination_guard.py  test_harness.py  test_health_integration.py  test_hindsight.py  test_hybrid_routing.py  test_integration.py  test_intent_drift.py  test_l0_tuner.py  test_memory_store.py  (+37 more)
plugins/: README.md  manifest.template.json
scripts/: install.sh
src/: full_main.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  backup.rs  chat.rs  checkup.rs  collaboration.rs  component_type.rs  config.rs  console.rs  cost.rs  earnings.rs  errors.rs  execution.rs  git.rs  hub.rs  hub_search.rs  journey.rs  lifecycle.rs  local_model.rs  market.rs  market_search.rs  mcp.rs  memory.rs  metrics.rs  mod.rs  notifications.rs  oauth.rs  org.rs  plugin_manager.rs  proactive.rs  recovery.rs  sandbox.rs  scheduler.rs  studio.rs  sync.rs  team_templates.rs  whisper.rs  workflow.rs
src/a2a/: router.rs
src/api/: mod.rs  rest_api.rs
src/bridge/: a2a.rs  a2a_discovery.rs  chat_agent.rs  local_model.rs  mod.rs  sync.rs  sync_enhanced.rs
src/channel/: adapter.rs  browser_ext.rs  cli.rs  desktop.rs  dingtalk.rs  feishu.rs  miniprogram.rs  mod.rs  pushplus.rs  qqbot.rs  rest_api.rs  serverchan.rs  smtp.rs  telegram.rs  webhook.rs  wechat_mp.rs  wecom.rs
src/component/: knowledge.rs  memory.rs  mod.rs  model.rs  persona.rs  skill.rs  tool.rs
src/computer/: app_ops.rs  browser_ops.rs  desktop_ops.rs  fs_ops.rs  mod.rs  perception.rs  sys_ops.rs
src/config/: channels.rs  mod.rs  model.rs  server.rs
src/console/: backend.rs  cost.rs  governance.rs  mod.rs  security.rs  types.rs
src/core/: agent_loop.rs  agent_pool.rs  agent_templates.rs  alive_engine.rs  approval.rs  assembler.rs  checkpoint.rs  code_tool.rs  community_templates.rs  component.rs  computer_control.rs  consensus.rs  cortex_engine.rs  data_flow.rs  data_flow_log.rs  decision_rules.rs  delegation.rs  demo_recorder.rs  dual_llm.rs  engine.rs  error.rs  event_bus.rs  event_stream.rs  feedback.rs  hub_seeder.rs  (+36 more)
tests/: conftest.py  integration_test.rs
web/: canvas.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+654 files in other folders)
