[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "morn"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[features]
default = ["mvp"]
mvp = []
local-llm = []        # TODO: reserved for local LLM inference
sandbox = ["wasmtime", "wat"]
email = ["lettre"]
server = ["axum", "tower-http", "futures-util"]
channels-full = []    # TODO: reserved for extended channel integrations
providers-full = []   # TODO: reserved for extended LLM provider backends
desktop-real = []     # TODO: reserved for real desktop automation (non-simulation mode)
vnc-sandbox = []    # TODO: reserved for VNC sandbox (virtual display isolation)
voice = []            # TODO: reserved for voice input/output
channels = []
bridge = []
orchestrator = []
studio = []
hub = []
computer = []
mcp = []
security = []
console = []
org = []
protocol = []
full = ["sandbox", "email", "server", "channels-full", "bridge", "orchestrator", "studio", "hub", "computer", "mcp", "security", "console", "org", "protocol", "local-llm", "providers-full", "desktop-real", "vnc-sandbox", "voice"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
tracing = "0.1"
sled = "0.34"
bincode = "1"
base64 = "0.22"
ring = "0.17"

# optional: sandbox
wasmtime = { version = "28", optional = true }
wat = { version = "1", optional = true }

# optional: email channel
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"], optional = true }

# optional: http server
axum = { version = "0.8", features = ["json", "ws"], optional = true }
# tower = { version = "0.5", optional = true }  # unused, kept as comment for reference
tower-http = { version = "0.6", features = ["cors"], optional = true }
futures-util = { version = "0.3", optional = true }

# optional: office/file exports
zip = { version = "2" }

# always needed (small)
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
wat = "1"
rust_xlsxwriter = "0.95"
