[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morn"
version = "0.1.0"
description = "Morn 数字生命框架核心"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Morn Contributors"}
]

dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pycryptodome>=3.20",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.0",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
]
redis = ["redis>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
telegram = ["aiogram>=3.0"]
local-llm = ["ollama>=0.3"]
vector = ["chromadb>=0.5.0"]
all = ["morn[telegram,local-llm,vector]"]

[project.entry-points."morn.plugins"]
health_monitor = "morn.plugins.health_monitor:HealthMonitorPlugin"
audit = "morn.plugins.audit:AuditPlugin"
bond_tracker = "morn.plugins.bond_tracker:BondTrackerPlugin"
dream_engine = "morn.plugins.dream_engine:DreamEnginePlugin"
hindsight = "morn.plugins.hindsight:HindsightPlugin"
identity_affirmer = "morn.plugins.identity_affirmer:IdentityAffirmerPlugin"
intent_drift = "morn.plugins.intent_drift:IntentDriftPlugin"
milestones = "morn.plugins.milestones:MilestonePlugin"
self_pruner = "morn.plugins.self_pruner:SelfPrunerPlugin"
self_reflection = "morn.plugins.self_reflection:SelfReflectionPlugin"
thinking_evolution = "morn.plugins.thinking_evolution:ThinkingEvolutionPlugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
testpaths = ["tests"]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "adversarial: 对抗测试",
    "stress: 压力测试",
    "slow: 耗时较长的测试",
]

[project.scripts]
morn = "morn.cli.main:main"

[tool.setuptools.packages.find]
include = ["morn*", "morn.core*", "morn.sdk*", "morn.plugins*", "morn.cli*", "morn.contrib*"]
exclude = ["mornd*"]