[package]
name = "morn-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "morn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
image = "0.25"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.33"
morn = { path = ".." }
dirs = "5"

# Mobile-specific (optional, only for mobile targets)
[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }